# smart-fin-tracker

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .eslintrc.json  Dockerfile  Dockerfile.prod  jest.config.js  package-lock.json  package.json
backend/src/: server.js
backend/src/__tests__/: auth.test.js  transactions.test.js
backend/src/config/: db.js
backend/src/middleware/: auth.js  errorHandler.js  validate.js
backend/src/models/: Transaction.js  User.js
backend/src/routes/: auth.js  transactions.js
backend/src/utils/: generateToken.js
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  constants.js  index.css
frontend/src/components/: Filters.jsx  Header.jsx  KpiCards.jsx  TransactionForm.jsx  TransactionList.jsx
frontend/src/components/charts/: CategoryPieChart.jsx  FlowBarChart.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AuthPage.jsx  Dashboard.jsx
frontend/src/services/: api.js
ml-service/: .dockerignore  Dockerfile  Dockerfile.prod  main.py  pyproject.toml  requirements.txt  ruff.toml
ml-service/tests/: conftest.py  test_main.py
