[project]
name = "smart-fintech-ml-service"
version = "2.0.0"
description = "ML microservice for automatic financial transaction categorization"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DSY"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
